--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required(VERSION 3.0)
 project(pseudocolor)
+set(CMAKE_BUILD_TYPE RELEASE)
+set(CMAKE_C_FLAGS "-O0 -ggdb")
+set(CMAKE_C_FLAGS_DEBUG "-Og -ggdb")
+set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native -flto")
+set(CMAKE_CXX_FLAGS "-O0 -ggdb")
+set(CMAKE_CXX_FLAGS_DEBUG "-Og -ggdb")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -flto")
 set(CMAKE_CXX_STANDARD 11)
-#custom installation path for Windows, you need to add OpenCV path to your environment vars
-set(CMAKE_PREFIX_PATH "C:\\Program Files\\opencv\\build\\")
+set(CMAKE_CXX_COMPILER "C:/Program Files/msys2/mingw64/bin/g++.exe")
+set(CMAKE_C_COMPILER "C:/Program Files/msys2/mingw64/bin/gcc.exe")
 include_directories(${PROJECT_SOURCE_DIR}/src)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV REQUIRED PATHS "C:/Program Files/msys2/mingw64/include/opencv4")
 file(GLOB all_SRCS
         "${PROJECT_SOURCE_DIR}/include/*.h"
         "${PROJECT_SOURCE_DIR}/include/*.hpp"
